Fix margins on Mobile Fixes #77

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -53,7 +53,7 @@ html {
   @apply flex flex-wrap mt-6 mb-6;
   padding-left: 1rem;
   padding-right: 1rem;
-  margin-top: 80px;
+  margin-top: 0px;
 }
 
 @screen md {
@@ -85,7 +85,7 @@ html {
 }
 
 .section-content-img {
-  @apply mx-auto;
+  @apply mx-auto rounded-lg;
 }
 
 
